# factuurgenerator

./: README.md  setup.cfg  setup.py
src/: my_app.json  my_app.py  my_app.tcss  test_stopwatch.py
src/Test_files/: test_stopwatch.json  test_stopwatch.py
src/factuurgenerator/: my_app.json  my_app.py
