[metadata]
name = base_unit_tester
description = Voeg hier een korte beschrijving toe!
author = Jouw Naam
author_email = jouw.email@voorbeeld.com
license = MIT
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/jouwgebruikersnaam/projectnaam/
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src
install_requires =
    importlib-metadata; python_version<"3.8"
    # andere dependencies

[options.packages.find]
where = src
exclude =
    tests

[options.entry_points]
console_scripts =
    tester = base_unit_tester.scripts.tester_textual:main
